# Sola

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  SolaRender.c  SolaRender.h  main.c
assets/: stbn_unitvec3_2Dx1D_128x128x64_0.ktx2
shaders/: anyHit.rahit  closeHit.rchit  decalBlend.rahit  gen.rgen  hostDeviceCommon.glsl  miss.rmiss  rayCommon.glsl  shadow.rmiss
